--- a/NGMASSAGES/index.html
+++ b/NGMASSAGES/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>NG Massages</h1>
+    <h2>Tu masajista preferido te masajea en zunga</h2>
 
     <script src="js/style.js"></script>
 </body>
