--- a/NGMASSAGES/index.html
+++ b/NGMASSAGES/index.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title> - NG Massages - </title>
+    <title> - NG Massages - Inicio</title>
 </head>
 <body>
     <h1>NG Massages</h1>
+<br>
+<div id="navbar">
+    <div><a href="pages/contacto.html" class="linksNavbar">Contacto</a></div>
+    <div><a class="linksNavbar">Tipos de masajes</a></div>
+</div>
+
     <h2>Tu masajista preferido te masajea en zunga</h2>
 
     <script src="js/style.js"></script>
